--- a/.test.env
+++ b/.test.env
@@ -1,11 +1,12 @@
 #------------------
 # LISTENING PORT
 PORT=3001
+MONGODB_URI=mongodb+srv://jordonez:6452487@cluster0.waefubr.mongodb.net/
 #------------------
-#MONGO CONECTION
-USERNAME=
-PASSWORD= 
-DATABASE=
-
+#MONGO CONECTION TO CLUSTER
+#USERNAME=
+#PASSWORD= 
+#DATABASE=
 #------------------
+#MONGO CONECTION LOCAL
 
