--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/index.js",
-    "build": "babel src --out-dir build",
+    "build": "babel src --out-dir dist",
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "keywords": [],
