--- a/test.env
+++ b/test.env
@@ -1,7 +1,7 @@
 #------------------
 # LISTENING PORT
 PORT=3001
-MONGODB_URI=mongodb+srv://jordonez:6452487@cluster0.waefubr.mongodb.net/
+MONGODB_URI=mongodb+srv://jordonez:6452487@cluster0.waefubr.mongodb.net/authapi
 #------------------
 #MONGO CONECTION TO CLUSTER
 #USERNAME=
