--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth_api",
+  "name": "novakademia",
   "version": "1.0.0",
-  "description": "api_rest",
+  "description": "api_rest_v1",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
