--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Xavi",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.414.0",
     "@babel/node": "^7.22.15",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
