--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.414.0",
+    "@aws-sdk/s3-request-presigner": "^3.418.0",
     "@babel/node": "^7.22.15",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
