--- a/.env
+++ b/.env
@@ -9,3 +9,12 @@ AWS_BUCKET_NAME: novakademia
 AWS_BUCKET_REGION: us-east-1
 AWS_PUBLIC_KEY: AKIAULNPTKBBHYXEWBHW
 AWS_SECRET_KEY: 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
+
+
+#MYSQL------------------>>
+MYSQL_DATABASE:trabajo_final
+MYSQL_USERNAME:root
+MYSQL_PASSWORD:6452487
+MYSQL_PORT:3306
+MYSQL_HOST:localhost
+
